Firefox issue with not align to center fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,12 +22,6 @@
     display: none;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 /* Variables */
 
 :root {
@@ -68,6 +62,4 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-    gap: 40px;
 }
